--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -800,24 +800,24 @@ html:lang(fr) .cnjnctn-or:before {
     </details>
     
 <h3><mark>Affected owner</h3>
-<p>As an affected owner, you <strong>must file</strong> an annual return.</p>
-<p>If you own more than one residential property in Canada, you must file a separate return for <strong>each property</strong>.</p>
-<p>If you are one of several affected owners of the residential property, <strong>each of you</strong> must file a separate return for the property. </p>
+<p><mark>As an affected owner, you <strong>must file</strong> an annual return.</p>
+<p><mark>If you own more than one residential property in Canada, you must file a separate return for <strong>each property</strong>.</p>
+<p><mark>If you are one of several affected owners of the residential property, <strong>each of you</strong> must file a separate return for the property. </p>
 <details>
-<summary>Exemptions from paying the tax</summary>
+<summary><mark>Exemptions from paying the tax</summary>
 
 <p>You may qualify for an exemption from paying the tax. To claim it, you must select the exemption on your return.</p>
 <p>If your ownership qualifies for an exemption, you <strong>do not</strong> have to pay the tax.</p>
 <p>If your ownership <strong>does not qualify</strong> for an exemption, you <strong>must</strong> pay the tax.</p>
 <p>Read more: <a href="#h_1_3">Exemption eligibility for affected owners</a></p>
 </details>
-<h3>Excluded owner</h3>
-<p>If you are not an affected owner, then you are an excluded owner. You <strong>do not</strong> have to:</p>
+<h3><mark>Excluded owner</h3>
+<p><mark>If you are not an affected owner, then you are an excluded owner. You <strong>do not</strong> have to:</p>
 <ul>
-<li>File a return</li>
-<li>Pay the tax</li>
+<li><mark>File a return</li>
+<li><mark>Pay the tax</li>
 </ul>
-    </mark>
+ 
 
 
  <h2 id="determine">Determine if you are an affected owner or an excluded owner</h2>
@@ -974,7 +974,7 @@ html:lang(fr) .cnjnctn-or:before {
                   <h4 class="h3"><small>Based on your choice, your result is:</small><br>
                     You are an affected owner</h4>
                   <p>You <strong>must file</strong> a return for the residential property. </p>
-                  <p>You will also have to pay the tax unless you qualify for an <a href="#exempttax">exemption</a>.</p>
+                  <p>You will also have to pay the tax unless you qualify for an <a href="#exempttax"><mark>exemption</a></mark>.</p>
                   <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156" target="_blank">Affected owners</a></p>
                 </div>
                 <br>
@@ -1040,7 +1040,7 @@ html:lang(fr) .cnjnctn-or:before {
                   <h4 class="h3"><small>Based on your choice, your result is:</small><br>
                     You are an affected owner</h4>
                   <p>You <strong>must file</strong> a return for the residential property. </p>
-                  <p>You will also have to pay the tax unless you qualify for an exemption.</p>
+                  <p>You will also have to pay the tax unless you qualify for an <a href="#exempttax"><mark>exemption</a></mark>.</p>
                   <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156" target="_blank">Affected owners</a></p>
                 </div>
                 <br>
