transfer local copy

--- a/subway/uht/when-file.html
+++ b/subway/uht/when-file.html
@@ -782,7 +782,7 @@ margin-left: 38px;
               <ul class="gc-navseq">
                 <li><a href="who-file.html">Who must file a return and pay the tax</span></a></li>
 		      <li class="active"><a aria-current="page"><a href="when-file.html">When to file the return and pay the tax</span></a></li>
-		      <li><a href="complete-return.html">Complete the return</span></a></li>
+		      <li><a href="complete-return.html">Complete the return and calculate the tax</span></a></li>
                 <li><a href="file-return.html">File the return</span></a></li>
                 <li><a href="pay-tax.html">Pay the tax</span></a></li>
                 <li><a href="contact.html">Contact us</span></a></li>
@@ -860,61 +860,7 @@ margin-left: 38px;
 		
 		 
 		 
-		 
-		 
-		 <h2>Keep your records</h2>
-        <p>You must keep records to support the information you provide in your return. If you claim an exemption but do not have adequate records to support it, we may <strong>disallow</strong> it.</p>
-		 <p>Generally, you must keep your records for 6 years from the end of the year they relate to. Your records must be kept in Canada, in English or French, unless otherwise authorized by the Minister.</p>
-<p>We cannot provide a defined list of records that you can use to support an exemption because each person’s situation is unique. </p>
-		 <p>Some examples of records to support an exemption could include, but are not limited to:</p>
-<details>
-	<summary class="mrgn-tp-md">Example - Vacation property exemption </summary>
-	
-	<ul>
-		<li>A diary of the days the residential property was used as a place of residence or lodging by you, your spouse or common-law partner, including the names of any persons who can confirm the residential property was occupied on those days</li>
-	<li>Any invoices, receipts or statements for goods and services purchased, that provide evidence that you, your spouse or common-law partner used the residential property as a place of residence or lodging for at least 28 days during the calendar year</li>
-<li>Any invoices, receipts or statements for transportation, that provide evidence that you, your spouse or common-law partner travelled to and from the residential property during the calendar year</li>
-</ul>
-</details>
-		 
-	
-		 <details>
-	<summary class="mrgn-tp-md">Example - Primary place of residence exemption</summary>
-	
-	<ul>
-		<li>Any invoices, receipts or statements for goods and services purchased, that provide evidence that the residential property was occupied as the primary place of residence by you, your spouse, common-law partner, child, or a child of your spouse or common-law partner</li>
-	<li>Any invoices, receipts or statements that provide evidence that your child, or a child of your spouse or common-law partner was pursuing an authorized study at a designated learning institution during the calendar year</li>
-	</ul>
-</details>
-		 <details>
-	<summary class="mrgn-tp-md">Example - Qualifying occupancy exemption</summary>
-	
-	<ul><li>Lease agreement or other agreement evidenced in writing used for the residential property to support one or more qualifying occupancy periods totalling at least 180 days in the calendar year</li></ul>
-	<ul><li>Any invoices, receipts or statements, that provide evidence that the residential property was rented during the calendar year, including the name(s) of the persons who occupied the residential property during the calendar year</li></ul>
-</details>
-		 <details>
-	<summary class="mrgn-tp-md">Example - Specified Canadian corporation exemption</summary>
-	
-	<ul><li>Articles of incorporation, share registry showing the names and addresses of all shareholders</li></ul>
-	<ul><li>Copy of land registration records that provide evidence of the ownership of the residential property by a specified Canadian corporation</li></ul>
-</details>
-		 <details>
-	<summary class="mrgn-tp-md">Example - Specified Canadian partnership/trust exemption</summary>
-	
-	<ul><li>Trust agreement, copy of land registration records that provide evidence that the residential property is owned by a trustee of a trust that is a specified Canadian trust</li></ul>
-	<ul><li>Partnership agreement, copy of land registration records that provide evidence that the residential property is owned by a partner of a partnership that is a specified Canadian partnership</li></ul>
-</details>
-		 <details>
-	<summary class="mrgn-tp-md">Example - Uninhabitable due to renovations exemption</summary>
-	
-	<ul><li>A diary of the days the owner occupied a different residential property, including the names of any persons who can confirm the owner occupied the other residential property on those days</li></ul>
-	<ul><li>Any invoices, receipts or statements for goods and services purchased, that provide evidence that the residential property was under renovation for at least 120 consecutive days in the calendar year</li></ul>
-</details>
-	<br>
-<p>Read more detailed information about <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/keeping-records/what-records-who-keep-them.html">keeping records</a>.</p>
-
-
-
+		
 		 
       <!--  <nav class="mrgn-bttm-lg mrgn-tp-lg">
             <h3 class="wb-inv">Document navigation</h3>
@@ -925,7 +871,7 @@ margin-left: 38px;
     -->
 
 <ul class="pager">
-  <li class="next"><a href="https://test.canada.ca/cra-arc/subway/uht/complete-return.html" rel="next">Complete the return</a></li>
+  <li class="next"><a href="https://test.canada.ca/cra-arc/subway/uht/complete-return.html" rel="next">Complete the return and calculate the tax</a></li>
 </ul>
 
 
@@ -942,7 +888,7 @@ margin-left: 38px;
 <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
 	defPreFooter.outerHTML = wet.builder.preFooter({
-		dateModified: "2023-08-01",
+		dateModified: "2023-08-10",
 		showPostContent: true,
 		showFeedback: true,
 		showShare: true
