--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -8,7 +8,7 @@
 <head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-<title>Complete the return - Underused Housing Tax - Canada.ca</title>
+<title>Complete the return and calculate the tax - Underused Housing Tax - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <meta name=”robots” content=”noindex, follow”>
 <!-- Meta data --> 
@@ -752,7 +752,7 @@ html:lang(fr) .cnjnctn-or:before {
       <ul class="gc-navseq">
         <li><a href="who-file.html">Who must file a return and pay the tax</span></a></li>
         <li><a href="when-file.html">When to file the return and pay the tax</span></a></li>
-        <li class="active"><a aria-current="page">Complete the return</a></li>
+        <li class="active"><a aria-current="page">Complete the return and calculate the tax</a></li>
         <li><a href="file-return.html">File the return</span></a></li>
         <li><a href="pay-tax.html">Pay the tax</span></a></li>
         <li><a href="contact.html">Contact us</span></a></li>
@@ -762,7 +762,7 @@ html:lang(fr) .cnjnctn-or:before {
     </nav>
   </section>
   <section class="gc-nav-section experimental provisional">
-    <h1 property="name" id="wb-cont">Complete the return</h1>
+    <h1 property="name" id="wb-cont">Complete the return and calculate the tax</h1>
     <p>If you are an <strong>affected owner</strong> of a residential property in Canada on December 31, <strong>you must file</strong> an Underused Housing Tax (UHT) return for the calendar year.</p>
     <p><a href="https://test.canada.ca/cra-arc/subway/uht/who-file.html#determine">Determine if you are an affected owner</a></p>
     
