--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -261,8 +261,7 @@
 
 <p>You must report all income and deductions on a T4 or T4A slip for First Nations workers regardless of whether the income is taxable or exempt.</p>
 
-<p><span class="fa fa-balance-scale fa-lg text-muted"></span> Many Indigenous people in Canada prefer not to describe themselves as <a href="#ajax-def2" aria-controls="ajax-def2" class="overlay-lnk" role="button">Indians <span class="far fa-question-circle"></span></a> and view this term as rooted in colonialism and racism. Under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>, the precise legal meaning of the term "Indian" refers to First Nations persons who are entitled to registration.</p>
-<p>The term First Nations worker on this page refers only to an worker who is registered or entitled to be registered under the Indian Act.</p>
+<p><span class="fa fa-balance-scale fa-lg text-muted"></span> The term First Nations worker on this page refers only to an worker who is registered or entitled to be registered under the Indian Act. Many Indigenous people in Canada prefer not to describe themselves as <a href="#ajax-def2" aria-controls="ajax-def2" class="overlay-lnk" role="button">Indians <span class="far fa-question-circle"></span></a> and view this term as rooted in colonialism and racism. Under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>, the precise legal meaning of the term "Indian" refers to First Nations persons who are entitled to registration. </p>
 
 
 
@@ -694,14 +693,18 @@ Indian Act</h3>
  </li>
 
   <li>             
-<h3 id="step2">Determine if the employee is a First Nations employee </h3>
+<h3 id="step2">Determine if the First Nations employment income is exempt from tax</h3>
 <div id="ajax-reg">
-<p>You must determine if the worker is registered with ISC and their effective date for registration. </p>
+<p> The exemption from tax under section 87 of the Indian Act only applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
 
-<p>The CRA requires proof of registration with ISC. The effective date for registration means the date that the First Nations worker is eligible for the tax exemption under section 87 of the Indian Act on the income they earn on a reserve.</p>
+<p>To determine if the First Nations employment income is tax-exempt or partially tax-exempt, ask your employee to fill out Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/td1-in.html">TD1-IN</a>, Determination of Exemption of an Indian's Employment Income to certify they meet <strong>all</strong> of the following conditions for the exemption:</p>
 
-<p>ISC is responsible for the Indian Register and is the only one authorized to issue a "certificate of Indian status" to an individual.</p>
-
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col">Your employee is registered under the Indian Act</li> 	 
+<li class="cnjnctn-col">Your employee is not a treaty beneficiary of a First Nation with a final or self-government agreement that ends the tax exemption under section 87 of the Indian Act</li>
+<li class="cnjnctn-col">If your employee lives on a reserve, it is their principal place of residence and is the centre of my daily routine</li>  
+</ul>
+<p>You must also certify that information given on Form TD1-IN is correct and complete.</p>
 <p>Learn more about registration under the Indian Act and the Indian Register:</p>
  <ul>
 <li>How to prove registration from ISC: <a href="https://www.sac-isc.gc.ca/eng/1100100032463/1572459644986#sec6">How to prove registration</a>  </li>
