--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -675,9 +675,7 @@ Indian Act</h3>
 <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the income is <strong>employment income</strong> or <strong>employment-related income</strong>, continue to <a href="#step2">Step 2 - Determine if the employee is a First Nations employee</a>.</li>
 <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the income is <strong>self-employment income paid to a person who is a fisher, a barber or hairdresser, or a taxi driver and driver of other passenger-carrying vehicles</strong>, continue to <a href="#step3">Step ? - ???</a>.</li>
 <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the <strong>payment is made to a recipient</strong> (for example: education allowances, scholarships or training allowances), continue to <a href="#step4">Step ? - ???</a>.</li>
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the income is <strong>other self-employment income or business income</strong>, <strong>do not</strong> continue to next step.</p> 
-<p>Add a paragraph to say that this page does not cover this content and redirect appropriately. </p> 
-</li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the income is <strong>other self-employment income or business income</strong>, continue to <a href="#step5">Step ? - ???</a>.</li>
 </ul>
 <details><summary><span class="fas fa-comments fa-lg"></span> What if you do not know if a worker is an employee or is self-employed </summary>
 <div id="worker-status">
