--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -8,7 +8,7 @@
 <head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-<title>Complete the return and calculate the tax - Underused Housing Tax - Canada.ca</title>
+<title>How to complete the return and calculate the tax - Underused Housing Tax - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <meta name=”robots” content=”noindex, follow”>
 <!-- Meta data --> 
@@ -752,7 +752,7 @@ html:lang(fr) .cnjnctn-or:before {
       <ul class="gc-navseq">
         <li><a href="who-file.html">Who must file a return and pay the tax</span></a></li>
         <li><a href="when-file.html">When to file the return and pay the tax</span></a></li>
-        <li class="active"><a aria-current="page">Complete the return and calculate the tax</a></li>
+        <li class="active"><a aria-current="page"><mark>How to complete the return and calculate the tax</a></mark></li>
         <li><a href="file-return.html">File the return</span></a></li>
         <li><a href="pay-tax.html">Pay the tax</span></a></li>
         <li><a href="contact.html">Contact us</span></a></li>
@@ -762,17 +762,20 @@ html:lang(fr) .cnjnctn-or:before {
     </nav>
   </section>
   <section class="gc-nav-section experimental provisional">
-    <h1 property="name" id="wb-cont">Complete the return and calculate the tax</h1>
+    <h1 property="name" id="wb-cont"><mark>How to complete the return and calculate the tax</mark></h1>
     <p>If you are an <strong>affected owner</strong> of a residential property in Canada on December 31, <strong>you must file</strong> an Underused Housing Tax (UHT) return for the calendar year.</p>
+	  <p><mark>You must file a separate return for each residential property that you own.<mark></p>
+	  <p><mark>If you are one of several affected owners of the residential property, each of you must file a separate return for the property.<mark></p>
     <p><a href="https://test.canada.ca/cra-arc/subway/uht/who-file.html#determine">Determine if you are an affected owner</a></p>
     
-    <h2>How to fill out the return</h2>
-    <p>Follow the steps below to help you fill out the parts of your return relevant to your situation.</p>
+    
+   
     <h3>What form to use</h3>
     <ul class="fa-ul">
       <li><span class="far fa-file-alt fa-lg fa-li"></span><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/uht-2900.html" target="_blank">UHT-2900, Underused Housing Tax Return and Election Form</a></li>
     </ul>
     <br>
+		   <p>Follow the steps below to help you fill out the parts of your return relevant to your situation.</p>
     <ol class="lst-stps stps-strpd">
       <li>
         <h3>Part 1 - Information about the owner </h3>
