--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -672,7 +672,7 @@ Indian Act</h3>
 <hr>
 
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the income is <strong>employment income</strong> or <strong>employment-related income</strong>, continue to <a href="#step2">Step 2 - Determine if the employee is a First Nations employee</a>.</li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the income is <strong>employment income</strong> or <strong>employment-related income</strong>, continue to <a href="#step2">Step 2 - Determine if the First Nations employment income is exempt from tax</a>.</li>
 <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the income is <strong>self-employment income paid to a person who is a fisher, a barber or hairdresser, or a taxi driver and driver of other passenger-carrying vehicles</strong>, continue to <a href="#step3">Step ? - ???</a>.</li>
 <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the <strong>payment is made to a recipient</strong> (for example: education allowances, scholarships or training allowances), continue to <a href="#step4">Step ? - ???</a>.</li>
 <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the income is <strong>other self-employment income or business income</strong>, continue to <a href="#step5">Step ? - ???</a>.</li>
@@ -703,12 +703,7 @@ Indian Act</h3>
 <li class="cnjnctn-col">If your employee lives on a reserve, it is their principal place of residence and is the centre of my daily routine</li>  
 </ul>
 <p>You must also certify that information given on Form TD1-IN is correct and complete.</p>
-<p>Learn more about registration under the Indian Act and the Indian Register:</p>
- <ul>
-<li>How to prove registration from ISC: <a href="https://www.sac-isc.gc.ca/eng/1100100032463/1572459644986#sec6">How to prove registration</a>  </li>
-<li>Effective date of the agreements and the expiry dates from Crown-Indigenous Relations and Northern Affairs Canada (CIRNAC): <a href="https://www.rcaanc-cirnac.gc.ca/eng/1100100028568/1529354090684">Treaty and agreement negotiations</a></li>
-</ul> 
-</div>
+
 <details><summary>Situation: Non-employment income (for example, pension income, retiring allowances, RRSP and CPP/QPP)</summary>
 <div id="ajax-non-emp">
 <p>Generally, if the worker is receiving unemployment insurance benefits, retiring allowances, Canada Pension Plan (CPP) payments, Quebec Pension Plan (QPP) payments, Registered Pension Plan (RPP) benefits or Wage Loss Replacement Plan (WLRP) benefits is exempt from income tax when the payment is received as a result of employment income that was exempt from income tax. </p>
@@ -718,20 +713,27 @@ Indian Act</h3>
 <p> <a href="#ajax-example-emp-related" aria-controls="ajax-example-emp-related" class="overlay-lnk" role="button">Example non-employment income related to employment income <span class="far fa-question-circle"></span></a> </p>
 </div>
 </details>
+
+<p>Learn more about registration under the Indian Act and the Indian Register:</p>
+ <ul>
+<li>From <abbr title="Indegenous Services Canada">ISC</abbr>: <a href="https://www.sac-isc.gc.ca/eng/1100100032463/1572459644986#sec6">How to prove registration</a>  </li>
+<li>From <abbr title="Crown-Indigenous Relations and Northern Affairs Canada">CIRNAC</abbr>: <a href="https://www.rcaanc-cirnac.gc.ca/eng/1100100028568/1529354090684">Treaty and agreement negotiations</a></li>
+</ul> 
+</div>
 <hr>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the worker <strong>does not</strong> have proof of registration, <strong>do not</strong> continue to next step.</p> 
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the employee <strong>does not</strong> meet all conditions for the exemption, <strong>do not</strong> continue to next step.</p> 
   <div id="ajax-notreg">
 <p>You must deduct CPP, EI and income tax the same as regular workers. </p> 
-<p> The exemption under section 87 only applies to a worker who is registered or entitled to be registered under the Indian Act. </p> </div></li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the worker has proof of registration, continue to <a href="#step2a">Step 2 - Determine if ???</a>.</li>
+</div></li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the employee meets all conditions for the exemption, continue to <a href="#step3">Step 3 - Determine if you can use the guidance to determine if the employment income is tax-exempt or partially tax-exempt</a>.</li>
 </ul>
 	
  </li>
 
   <li>
-<h3 id="step2a">Determine if the employment income is treated differently</h3>
+<h3 id="step3">Determine if you can use the guidance to determine if the employment income is tax-exempt or partially tax-exempt</h3>
  <div id="ajax-uncommon">
 <p>Depending on the situation, there are other uncommon factors that result in employment income being treated differently. This means that any factors connecting the income to a reserve must be analysed based on various court decisions to determine if the exemption applies. </p>
 
