--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -878,6 +878,7 @@ html:lang(fr) .cnjnctn-or:before {
           </details>
           <p class="mrgn-tp-md">If you want to use the residential property's fair market value to make your calculation, you must file a <a href="#FMV-election">Fair market value (FMV) election</a>.</p>
         </details>
+	      <p><a href="#calctaxpay">How to calculate the tax payable</a></p>
       </li>
       <li>
         <h3 id="part-3">Part 3 - Multiple residential properties</h3>
@@ -966,7 +967,7 @@ html:lang(fr) .cnjnctn-or:before {
         </details>
       </li>
       <li>
-        <h3>Part 8 - Calculation of tax payable</h3>
+        <h3 id="calctaxpay">Part 8 - Calculation of tax payable</h3>
         <p>If your ownership of a residential property does not qualify for an exemption from paying the tax for a calendar year, you must calculate what you owe.</p>
         <p>The Underused Housing Tax rate is 1%.</p>
         <p>To calculate what you owe, multiply the value of the residential property by the tax rate. Then multiply that result by your ownership percentage of the property.</p>
