--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -1003,7 +1003,7 @@ html:lang(fr) .cnjnctn-or:before {
     </section>
     	 
 		 
-		 <h2>Keep your records</h2>
+		 <h2><mark>Keep your records</h2>
         <p>You must keep records to support the information you provide in your return. If you claim an exemption but do not have adequate records to support it, we may <strong>disallow</strong> it.</p>
 		 <p>Generally, you must keep your records for 6 years from the end of the year they relate to. Your records must be kept in Canada, in English or French, unless otherwise authorized by the Minister.</p>
 <p>We cannot provide a defined list of records that you can use to support an exemption because each person’s situation is unique. </p>
