--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -735,15 +735,24 @@ Indian Act</h3>
   <li>
 <h3 id="step3">Determine if you can use the guidance to determine if the employment income is tax-exempt or partially tax-exempt</h3>
  <div id="ajax-uncommon">
-<p>Depending on the situation, there are other uncommon factors that result in employment income being treated differently. This means that any factors connecting the income to a reserve must be analysed based on various court decisions to determine if the exemption applies. </p>
+<p>You can use the employment income guidance for common employment situations. Depending on the situation, there are other uncommon factors that result in employment income being treated differently. This means that any factors connecting the income to a reserve must be analysed based on various court decisions to determine if the exemption applies. </p>
 
 <p><a href="#ajax-uncommon1" aria-controls="ajax-uncommon1" class="overlay-lnk" role="button">Examples where exempt (uncommon situations) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-uncommon2" aria-controls="ajax-uncommon2" class="overlay-lnk" role="button">Examples where <strong>not</strong> exempt (uncommon situations) <span class="far fa-question-circle"></span></a> </p>
 </div>
+<hr>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If your situation is an <strong>uncommon</strong>, <strong>do not</strong> continue to next step.</p> 
+  <div id="ajax-notreg">
+<p>You can call CRA at <strong>1-800-959-8281</strong>.  </p> 
+<p> You must deduct CPP, EI and income tax the same as regular workers until you receive confirmation from the CRA. </p> 
+</div></li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If your situation is common, continue to <a href="#step4">Step 4 - Use the guidelines to determine if the employment income is tax-exempt or partially tax-exempt</a>.</li>
+</ul>
  </li>
 
   <li>
-<h3 id="step2a">Determine the residency of the worker</h3>
+<h3 id="step4">Use the guidelines to determine if the employment income is tax-exempt or partially tax-exempt</h3>
 
 <details><summary>Situation: Your employee lives on a reserve and you are a resident on a reserve - Guideline 2</summary>
 <h4>Exempt income situation</h4>
