--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -742,7 +742,7 @@ Indian Act</h3>
 </div>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If your situation is an <strong>uncommon</strong>, <strong>do not</strong> continue to next step.</p> 
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If your situation is <strong>uncommon</strong>, <strong>do not</strong> continue to next step.</p> 
   <div id="ajax-notreg">
 <p>You can call CRA at <strong>1-800-959-8281</strong>.  </p> 
 <p> You must deduct CPP, EI and income tax the same as regular workers until you receive confirmation from the CRA. </p> 
