--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -750,7 +750,7 @@ html:lang(fr) .cnjnctn-or:before {
       <ul class="gc-navseq">
         <li class="active"><a aria-current="page">Who must file a return and pay the tax</a></li>
         <li><a href="when-file.html">When to file the return and pay the tax</a></li>
-        <li><mark><a href="complete-return.html">How to complete the return and calculate the tax</a></mark></li>
+        <li><a href="complete-return.html">How to complete the return and calculate the tax</a></li>
         <li><a href="file-return.html">File the return</a></li>
         <li><a href="pay-tax.html">Pay the tax</a></li>
         <li><a href="contact.html">Contact us</a></li>
@@ -799,23 +799,23 @@ html:lang(fr) .cnjnctn-or:before {
       <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681153">Owner of residential property</a></p>
     </details>
     
-<h3><mark>Affected owner</h3>
-<p><mark>As an affected owner, you <strong>must file</strong> an annual return.</p>
-<p><mark>If you own more than one residential property in Canada, you must file a separate return for <strong>each property</strong>.</p>
-<p><mark>If you are one of several affected owners of the residential property, <strong>each of you</strong> must file a separate return for the property. </p>
+<h3>Affected owner</h3>
+<p>As an affected owner, you <strong>must file</strong> an annual return.</p>
+<p>If you own more than one residential property in Canada, you must file a separate return for <strong>each property</strong>.</p>
+<p>If you are one of several affected owners of the residential property, <strong>each of you</strong> must file a separate return for the property. </p>
 <details>
-<summary><mark>Exemptions from paying the tax</summary>
+<summary>Exemptions from paying the tax</summary>
 
 <p>You may qualify for an exemption from paying the tax. To claim it, you must select the exemption on your return.</p>
 <p>If your ownership qualifies for an exemption, you <strong>do not</strong> have to pay the tax.</p>
 <p>If your ownership <strong>does not qualify</strong> for an exemption, you <strong>must</strong> pay the tax.</p>
 <p>Read more: <a href="#h_1_3">Exemption eligibility for affected owners</a></p>
 </details>
-<h3><mark>Excluded owner</h3>
-<p><mark>If you are not an affected owner, then you are an excluded owner. You <strong>do not</strong> have to:</p>
+<h3>Excluded owner</h3>
+<p>If you are not an affected owner, then you are an excluded owner. You <strong>do not</strong> have to:</p>
 <ul>
-<li><mark>File a return</li>
-<li><mark>Pay the tax</li>
+<li>File a return</li>
+<li>Pay the tax</li>
 </ul>
  
 
@@ -974,7 +974,7 @@ html:lang(fr) .cnjnctn-or:before {
                   <h4 class="h3"><small>Based on your choice, your result is:</small><br>
                     You are an affected owner</h4>
                   <p>You <strong>must file</strong> a return for the residential property. </p>
-                  <p>You will also have to pay the tax unless you qualify for an <a href="#exempttax"><mark>exemption</a></mark>.</p>
+                  <p>You will also have to pay the tax unless you qualify for an <a href="#exempttax">exemption</a>.</p>
                   <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156" target="_blank">Affected owners</a></p>
                 </div>
                 <br>
@@ -1040,7 +1040,7 @@ html:lang(fr) .cnjnctn-or:before {
                   <h4 class="h3"><small>Based on your choice, your result is:</small><br>
                     You are an affected owner</h4>
                   <p>You <strong>must file</strong> a return for the residential property. </p>
-                  <p>You will also have to pay the tax unless you qualify for an <a href="#exempttax"><mark>exemption</a></mark>.</p>
+                  <p>You will also have to pay the tax unless you qualify for an <a href="#exempttax">exemption</a>.</p>
                   <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156" target="_blank">Affected owners</a></p>
                 </div>
                 <br>
@@ -1281,7 +1281,7 @@ html:lang(fr) .cnjnctn-or:before {
                 <li>A vacation property located in an eligible area of Canada and used by you or your spouse or common-law partner for at least 28 days in the calendar year</li>
               </ul>
                <p><span class="fas fa-search-location fa-lg pull-left mrgn-rght-sm"></span>Determine if your residential property is located in an eligible area of Canada for the purposes of this exemption.</p>
-		    <p><a href="https://apps.cra-arc.gc.ca/ebci/sres/ext/pub/ntrUhtExpnTl?request_locale=en_CA" target="_blank"><mark>Underused housing tax vacation property designation tool</a></mark></p> 
+		    <p><a href="https://apps.cra-arc.gc.ca/ebci/sres/ext/pub/ntrUhtExpnTl?request_locale=en_CA" target="_blank">Underused housing tax vacation property designation tool</a></p> 
 	    </div>
 		  <p class="mrgn-tp-lg"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn5/exemption-vacation-properties.html#_Toc122423683" target="_blank">Exemption for vacation properties </a></p>
         
