--- a/subway/uht/contact.html
+++ b/subway/uht/contact.html
@@ -749,7 +749,7 @@ html:lang(fr) .cnjnctn-or:before {
       <ul class="gc-navseq">
         <li><a href="who-file.html">Who must file a return and pay the tax</a></li>
         <li><a href="when-file.html">When to file the return and pay the tax</a></li>
-        <li><a href="complete-return.html">Complete the return</a></li>
+        <li><a href="complete-return.html">How to complete the return and calculate the tax</a></li>
         <li><a href="file-return.html">File the return</a></li>
         <li><a href="pay-tax.html">Pay the tax</a></li>
         <li class="active"><a aria-current="page" href="contact.html">Contact us</a></li>
@@ -765,7 +765,7 @@ html:lang(fr) .cnjnctn-or:before {
         <h2 class="h3 mrgn-tp-0">Online</h2>
       </dt>
       <dd>
-        <p>This option is available to <strong>Canadian citizens and permanent residents only</strong></p>
+        <p>This option is available to <strong>Canadian citizens and permanent residents only</strong>.</p>
         <details class="mrgn-tp-md">
           <summary>Individuals </summary>
           <p>Use CRA My Account for Individuals to:</p>
