--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -663,6 +663,34 @@ Indian Act</h3>
           <h2 class="mrgn-tp-sm">Full-text to determine your withholding and reporting obligations</h2>
            <p class="text-muted small">The following is the <strong>alternate format</strong> to the specific questions or results, and provides the same information in full-text. </p>
 
+<p>Depending on the nature of the payment you made to the worker the withholding and reporting deductions are different.</p>
+<details><summary><span class="fas fa-comments fa-lg"></span> What if you do not know if a worker is an employee or is self-employed </summary>
+<div id="worker-status">
+<p>If you or an individual  working for you is not sure of the worker's employment status (employee or self-employed), either one of you can request a CPP/EI ruling to determine the status and whether the employment or the earnings are   pensionable, insurable or both.</p>
+<p>Learn more:</p>
+<ul>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/canada-pension-plan-employment-insurance-explained-11.html">How to get a CPP/EI ruling</a></li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html">Guide RC4110 - Employee or Self-employed?</a> </li> 
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained.html">CPP/EI Explained</a></li>
+</ul>
+</div>
+</details>
+  <div class="wb-tabs mrgn-tp-lg">
+    <div class="tabpanels">
+      <details id="subtab1">
+        <summary>Employment income or employment-related income</summary>
+ </details>
+ <details id="subtab2">
+        <summary>Payment is made to a recipient</summary>
+ </details>
+ <details id="subtab3">
+        <summary>Self-employment income paid to a person who is a fisher, a barber or hairdresser, or a taxi driver and driver of other passenger-carrying vehicles</summary>
+ </details>
+<details id="subtab4">
+        <summary>Other self-employment income or business income</summary>
+ </details>
+ </div>
+ </div>
 
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
