plural/date mod.

--- a/subway/uht/pay-tax.html
+++ b/subway/uht/pay-tax.html
@@ -870,8 +870,8 @@ margin-left: 38px;
     <li>Calendar year for which you are paying</li>
     <li>Your tax number
         <ul>
-            <li>Individual payment: SIN, ITN or TTN</li>
-            <li>Corporate payment: CRA Underused Housing Tax business number (BN-RU)</li></ul>
+            <li>Individuals: SIN, ITN or TTN</li>
+            <li>Corporations: CRA Underused Housing Tax business number (BN-RU)</li></ul>
     </li>
 </ul></dd></dl>
 
@@ -952,7 +952,7 @@ margin-left: 38px;
 <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
 	defPreFooter.outerHTML = wet.builder.preFooter({
-		dateModified: "M2023-08-01",
+		dateModified: "M2023-08-10",
 		showPostContent: true,
 		showFeedback: true,
 		showShare: true
