--- a/subway/uht/pay-tax.html
+++ b/subway/uht/pay-tax.html
@@ -782,7 +782,7 @@ margin-left: 38px;
                 <ul class="gc-navseq">
                 <li><a href="who-file.html">Who must file a return and pay the tax</span></a></li>
                 <li><a href="when-file.html">When to file the return and pay the tax</span></a></li>
-	<li><a href="complete-return.html">Complete the return and calculate the tax</span></a></li>
+	<li><a href="complete-return.html">How to complete the return and calculate the tax</span></a></li>
                 <li><a href="file-return.html">File the return</span></a></li>
                 <li class="active"><a aria-current="page"><a href="pay-tax.html">Pay the tax</span></a></li>
                 <li><a href="contact.html">Contact us</span></a></li>
