--- a/subway/uht/when-file.html
+++ b/subway/uht/when-file.html
@@ -782,7 +782,7 @@ margin-left: 38px;
               <ul class="gc-navseq">
                 <li><a href="who-file.html">Who must file a return and pay the tax</span></a></li>
 		      <li class="active"><a aria-current="page"><a href="when-file.html">When to file the return and pay the tax</span></a></li>
-		      <li><a href="complete-return.html">Complete the return and calculate the tax</span></a></li>
+		      <li><a href="complete-return.html">How to complete the return and calculate the tax</span></a></li>
                 <li><a href="file-return.html">File the return</span></a></li>
                 <li><a href="pay-tax.html">Pay the tax</span></a></li>
                 <li><a href="contact.html">Contact us</span></a></li>
@@ -871,7 +871,7 @@ margin-left: 38px;
     -->
 
 <ul class="pager">
-  <li class="next"><a href="https://test.canada.ca/cra-arc/subway/uht/complete-return.html" rel="next">Complete the return and calculate the tax</a></li>
+  <li class="next"><a href="https://test.canada.ca/cra-arc/subway/uht/complete-return.html" rel="next">How to complete the return and calculate the tax</a></li>
 </ul>
 
 
