--- a/payroll/calculate/payment/first-nations-interactive.html
+++ b/payroll/calculate/payment/first-nations-interactive.html
@@ -663,8 +663,14 @@ Indian Act</h3>
           <h2 class="mrgn-tp-sm">Full-text to determine your withholding and reporting obligations</h2>
            <p class="text-muted small">The following is the <strong>alternate format</strong> to the specific questions or results, and provides the same information in full-text. </p>
 
-<p>Depending on the nature of the payment you made to the worker the withholding and reporting deductions are different.</p>
-<details><summary><span class="fas fa-comments fa-lg"></span> What if you do not know if a worker is an employee or is self-employed </summary>
+<p>Determine your withholding and reporting obligations based on the nature of the payment you made:</p>
+<ul>
+<li><a href="#subtab1">Employment income or employment-related income</a> </li>
+<li><a href="#subtab2">Non-employment income</a> (for example: payment made to a recipient for education allowances, scholarships or training allowances)</li>
+<li><a href="#subtab3">Self-employment income</a></li>
+</ul>
+
+<details><summary><span class="fas fa-comments></span> What if you do not know if a worker is an employee or is self-employed </summary>
 <div id="worker-status">
 <p>If you or an individual  working for you is not sure of the worker's employment status (employee or self-employed), either one of you can request a CPP/EI ruling to determine the status and whether the employment or the earnings are   pensionable, insurable or both.</p>
 <p>Learn more:</p>
@@ -678,17 +684,16 @@ Indian Act</h3>
   <div class="wb-tabs mrgn-tp-lg">
     <div class="tabpanels">
       <details id="subtab1">
-        <summary>Employment income or employment-related income</summary>
+        <summary>Employment income</summary>
  </details>
  <details id="subtab2">
-        <summary>Payment is made to a recipient</summary>
+        <summary>Non-employment income</summary>
  </details>
  <details id="subtab3">
-        <summary>Self-employment income paid to a person who is a fisher, a barber or hairdresser, or a taxi driver and driver of other passenger-carrying vehicles</summary>
+        <summary>Self-employment income</summary>
+
  </details>
-<details id="subtab4">
-        <summary>Other self-employment income or business income</summary>
- </details>
+
  </div>
  </div>
 
